# rnacentral-data-schema

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  README.mkd  changelog.mkd  pyproject.toml  requirements.txt  rnacentral-schema.json  validate.py
examples/: 5srrnadb.json  crs.json  crw.json  flybase.json  gtrnadb.json  lincipedia.json  lncbook.json  mgnify.json  minimal.json  mirbase.json  mirgenedb.json  modomics.json  sgd.json  snodb.json  tarbase.json  tmrna.json
sections/: anticodon.json  data-provider.json  entry.json  gene.json  global-id.json  inferred-phylogeny.json  location.json  metadata.json  modification.json  ncrna.json  publications.json  related-sequence.json  secondary-structure.json  sequence.json
tests/: example_file_tests.py  validators_tests.py
