[tool.poetry]
name = "rnacentral-data-schema"
version = "0.4.0"
description = ""
authors = ["Blake Sweeney <bsweeney@ebi.ac.uk>"]
license = "APACHE 2.0"
readme = "README.md"
packages = [{include = "rnacentral_data_schema"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
jsonschema = "^4.17.3"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "*_tests.py"
